# zeroize-test2

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  genpkey  go  zeroize_on_drop.patch
src/: main.rs
